Fix overflow background

--- a/the-lorax/src/app/pages/about/about.css
+++ b/the-lorax/src/app/pages/about/about.css
@@ -4,6 +4,7 @@
     height: 100vh;
     overflow: auto;
     min-height: fit-content;
+    width: 100vw;
 }
 
 .about-body {
